# goal-plus

./: .gitignore  .mcp.json  AGENTS.md  README.md  README_zh.md  opencode.json  pyproject.toml  pytest.ini  search-design-balance.md
.claude/: settings.json
.claude/agents/: any-search-agent-deep.md  any-search-agent-flash.md  any-search-agent.md  search-candidate-agent-deep.md  search-candidate-agent-flash.md  search-candidate-agent.md
.codex/: config.example.toml  config.toml  hooks.json
.codex/agents/: any_search_agent.toml  goal_plus_final_checker.toml  search_candidate_agent.toml
.opencode/: opencode.json
.opencode/agents/: AnySearchAgent.md  AnySearchAgentDeep.md  AnySearchAgentFlash.md  (+7 more)
benchmarks/: README.md
docs/: agent-host-adapters.md  api.md  ascendc-direct-invoke-development-plan-zh.md  ascendc-direct-invoke-development-plan.md  claude-code.md  codex.md  debugging-runtime.md  design.md  flow-view.md  opencode.md  pi-native-session-smoke.md  pi.md  scenarios-kernel-optimize-design.md  strategy-adaptevolve.md  strategy-openevolve.md  todo.md  toy-example.md  worker-budget-smoke.md
examples/: README.md  circle_packing_search_spec.json  edgebench_ad_placement_search_spec.json  k_module_search_spec.json  readme.md  signal_processing_search_spec.json  swe_bench_20212_search_spec.json
scenarios/: README.md
scripts/: monitor_goal_plus.sh  run_ascendc_cannbench_e2e.sh
tests/: README.md  __init__.py  _runtime_helpers.py  conftest.py  test_agent_hosts.py  test_ascendc_goal_driven_example.py  test_benchmarking.py  test_cannbench_tilelang_example.py  test_claude_assets.py  test_codex_assets.py  test_codex_goal_plus_hooks.py  test_codex_pi_parity.py  test_codex_pricing.py  test_edgebench_ad_placement_example.py  test_example_scenarios.py  test_examples.py  test_goal_plus.py  test_goal_plus_stop_hook.py  test_host_assets_common.py  test_host_observability.py  test_k_module_runtime.py  test_kernel_optimize_example.py  test_kernel_optimize_scenario.py  test_model_optimize_torch_cpu_target.py  test_models.py  test_monitor.py  test_monitor_script.py  test_opencode_assets.py  test_pi_assets.py  test_pi_driver.py  test_pi_pool.py  test_pi_tool.py  test_pi_worker.py  test_reporting.py  test_runtime_unit.py  test_server.py  test_space_agent.py  test_st_host_harness.py  test_statistics.py  test_time_advisory.py  (+5 more)
(+240 files in other folders)
