[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-any-search-mcp"
version = "0.1.0"
description = "A small MCP-first runtime for verifiable agentic search."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=2.3,<3.0",
  "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
agentic-any-search-mcp = "agentic_any_search_mcp.server:main"
agentic-any-search-trace = "agentic_any_search_mcp.trace_export:main"
agentic-any-search-pi-tool = "agentic_any_search_mcp.pi_tool:main"
agentic-any-search-pi-worker = "agentic_any_search_mcp.pi_worker:main"
