[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goal-plus"
version = "0.1.0"
description = "A host-neutral goal runtime with optional verifier-guided Search Mode."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=2.3,<3.0",
  "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "tomli>=2.0; python_version < '3.11'",
]
bench = [
  "datasets>=2.18",
]

[project.scripts]
goal-plus = "goal_plus.server:main"
goal-plus-trace = "goal_plus.trace_export:main"
goal-plus-pi-tool = "goal_plus.pi_tool:main"
goal-plus-pi-worker = "goal_plus.pi_worker:main"
goal-plus-bench = "goal_plus.benchmarking.cli:main"
